centered the 2 images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,20 @@
-form {
+.center-search {
     display: flex;
+
+    width: 55%;
+}
+
+#search-container {
+    display: flex;
+    justify-content: center;
+}
+
+#api-container {
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+}
+
+img {
+    width: 45%;
 }
