--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,30 @@
 #search-container {
     display: flex;
     justify-content: center;
+    background-color: #02b8a5;
 }
 
 #api-container {
     display: flex;
-    justify-content: center;
     justify-content: space-around;
+    margin-top: 50px;
+}
+
+
+h1 {
+    margin: 0;
 }
 
 img {
     width: 45%;
+}
+
+.api-rows {
+    position: relative;
+}
+
+#position {
+    position: absolute;
+    top: 3%;
+    left: 3%;
 }
