--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,8 @@
 }
 
 #api-container {
-    display: flex;
-    justify-content: space-around;
+    /* display: flex;
+    justify-content: space-around; */
     margin-top: 50px;
 }
 
@@ -21,15 +21,11 @@ h1 {
     margin: 0;
 }
 
-img {
-    width: 45%;
-}
-
 .api-rows {
     position: relative;
 }
 
-#position {
+#fav-star {
     position: absolute;
     top: 3%;
     left: 3%;
