--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,6 @@
     justify-content: center;
     background-color: #02b8a5;
 }
-
-#fav-star {
-    position: absolute;
-    top: 3%;
-    left: 3%;
+#search {
+    text-align: center;
 }
